--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   auto_direction: ^0.0.5
   shared_preferences: ^2.0.9
+  shamsi_date: ^1.0.0
 
 dev_dependencies:
   flutter_test:
